--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #efefef;
+    background-image: url('images/30Rock.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .start {
